--- a/CR_DeckAnalysis/ClashBot/ClashBot.csproj
+++ b/CR_DeckAnalysis/ClashBot/ClashBot.csproj
@@ -293,7 +293,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="img\graveyard.png" />
+    <Content Include="img\graveyard.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="img\guards.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -304,7 +306,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="img\ice-golem.png" />
+    <Content Include="img\ice-golem.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="img\ice-spirit.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -315,6 +319,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="img\inferno-dragon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="img\inferno-tower.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
