--- a/CR_DeckAnalysis/ClashBot/ClashBot.csproj
+++ b/CR_DeckAnalysis/ClashBot/ClashBot.csproj
@@ -178,6 +178,9 @@
     <Content Include="img\archers.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="RawData\17.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="RawData\15.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -460,6 +463,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="img\tornado.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="img\valkyrie.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
